--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "admin-dashboard-v1",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "next build",
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "seed": "ts-node -r tsconfig-paths/register ./prisma/seed/index.ts"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
@@ -22,6 +24,7 @@
     "@trpc/next": "^10.8.1",
     "@trpc/react-query": "^10.8.1",
     "@trpc/server": "^10.8.1",
+    "bcrypt": "^5.1.0",
     "country-iso-2-to-3": "^1.1.0",
     "next": "13.1.1",
     "next-auth": "^4.18.7",
@@ -33,6 +36,8 @@
     "zod": "^3.20.2"
   },
   "devDependencies": {
+    "@swc/core": "^1.3.26",
+    "@types/bcrypt": "^5.0.0",
     "@types/node": "^18.11.18",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.26",
@@ -47,6 +52,7 @@
     "prettier-plugin-tailwindcss": "^0.2.1",
     "prisma": "^4.8.0",
     "tailwindcss": "^3.2.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
   "ct3aMetadata": {
