--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "prisma": "^4.8.0",
     "tailwindcss": "^3.2.0",
     "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.1.2",
     "typescript": "^4.9.4"
   },
   "ct3aMetadata": {
